// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Core/Container Centered Content 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jXAVEG sc-eEVmNe jhNcBG"
  >
    <div
      class="sc-gKAaRy iZvmHx sc-iCoGMd cNdjQg sc-dksuTV gwiFjK sc-jhGUec iJuZUX"
    >
      <h3
        class="sc-gXfVKN bnTPVg sc-cBoqAE jXwGUO"
      >
        I am in a container
      </h3>
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/Container Default 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jXAVEG sc-eEVmNe jhNcBG"
  >
    <div
      class="sc-gKAaRy iZvmHx sc-iCoGMd cNdjQg sc-dksuTV kuvbch sc-jhGUec iJuZUX"
    >
      <h3
        class="sc-gXfVKN bnTPVg sc-cBoqAE jXwGUO"
      >
        I am in a container
      </h3>
    </div>
  </div>
</div>
`;
